# rag-scrapbox

./: README.md  compose.yml
elasticsearch/: compose.yml
ingestion-batch/: README.md  pyproject.toml
ingestion-batch/batch/: config.py  elasticsearch_client.py  main.py  processor.py  scrapbox.py
ingestion-batch/tests/: test_processor.py
search-api/: Dockerfile  README.md  pyproject.toml
search-api/api/: config.py  deps.py  encoder.py  llm.py  main.py  search.py
splade-encoder-api/: README.md  compose.yml  pyproject.toml
splade-encoder-api/api/: deps.py  encoder.py  main.py  models.py
splade-encoder-api/api/routers/: __init__.py  encoder.py  health.py
splade-encoder-api/src/splade_encoder_api/: encoder.py  main.py
splade-encoder-api/tests/: test_logic.py  test_splade.py
web-ui/: README.md
