[project]
name = "search-api"
version = "0.1.0"
description = "Search API for RAG Scrapbox"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "elasticsearch>=8.0.0,<9.0.0",
    "aiohttp>=3.8.0",
    "httpx>=0.24.0",
    "google-genai>=0.1.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
