[project]
name = "splade-encoder-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "fugashi>=1.5.2",
    "ipadic>=1.0.0",
    "numpy",
    "protobuf>=6.33.4",
    "sentencepiece>=0.2.1",
    "torch",
    "transformers",
    "unidic-lite>=1.0.8",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
